--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A social media application which we are going to code",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",   
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,6 +13,7 @@
   "author": "Kishlaya",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   }
 }
